compiler.old/tests/compiler/must_fail/t_15.rs.exp.err
tests/compiler/must_fail/t_15.rs:1:8: 1:9 error: variable x not used, rename to _x to ignore
fn foo(x: stack! (b64)) {
       ^^
