compiler.old/tests/compiler/must_fail/t_15.rs
fn foo(x: stack! (b64)) {
}

/*
START:CMD
ARG="print[input]"
END:CMD
*/
